--- a/miniprogram/pages/detail/detail.wxml
+++ b/miniprogram/pages/detail/detail.wxml
@@ -17,7 +17,7 @@
       <image class="detail_img" src="cloud://test-807938.7465-test-807938/logo.jpg"></image>
       <view class="detail_view">
         <view class="detail_desc">这是描述详情的地方，半永久纹眉，活动期间折上还可加券</view>
-        
+
         <view class="price">
           <text class="p1">￥399</text>
           <text class="p2">￥999</text>
@@ -34,7 +34,13 @@
     <button class="btn_share">邀请好友助力</button>
     <button class="btn_help">帮他/她助力</button>
   </view>
-  <view class="share_list">
-
+  <view class="help">
+    <view class="help_list">
+      <view class="help_title">好友助力榜</view>
+      <view class="help_item" wx:for="{{5}}">
+        {{index}} 王琦
+        <text class="add_price">+5元</text>
+      </view>
+    </view>
   </view>
 </view>
