--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,12 +1,12 @@
 /**app.wxss**/
+@import "./style/iconfont.wxss";
+
 page, .container {
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background: #f0f0f0;
 }
-.container{
+
+.container {
   width: 100%;
 }
 
