--- a/miniprogram/pages/detail/detail.wxss
+++ b/miniprogram/pages/detail/detail.wxss
@@ -12,7 +12,7 @@
   text-align: center;
   font-size: 32rpx;
   color: #fff;
-  margin-top: 100rpx;
+  padding-top: 100rpx;
 }
 
 .coupon {
@@ -145,6 +145,7 @@
   width: 100%;
   background: #fff;
   padding-top: 30rpx;
+  overflow: hidden;
 }
 
 .share_content button{
@@ -167,6 +168,7 @@
   position: relative;
   border: 1px solid red;
   padding: 60rpx 20rpx;
+  border-radius: 10rpx;
 }
 .help_title{
   width: 400rpx;
